AC_INIT(src/tamal.h)
AM_INIT_AUTOMAKE(tamal, 0.1)
AM_CONFIG_HEADER(src/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_YACC

dnl Checks for libraries.
dnl AC_CHECK_LIB(m, pow)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS(stdlib.h)
AC_CHECK_HEADERS(stdio.h)
AC_CHECK_HEADERS(string.h)
AC_CHECK_HEADERS(malloc.h)

dnl this is enabled by default. TODO: disable it.
AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],if test "x$enableval" = "xyes"; then
  CFLAGS="-g $CFLAGS"
fi)

AC_ARG_ENABLE(warnings, [  --enable-warnings       turn on warnings [default=no]],
if test "x$enableval" = "xyes"; then
  CFLAGS="-Wall $CFLAGS"
fi)

AC_ARG_ENABLE(warnings, [  --enable-pedantic       turn on pedantic [default=no]],
if test "x$enableval" = "xyes"; then
  CFLAGS="-pedantic $CFLAGS"
fi)

AC_ARG_ENABLE(efence, [  --enable-efence         link against efence [default=no]],
if test "x$enableval" = "xyes"; then
  AC_CHECK_LIB(efence, malloc)
fi)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_CHECK_FUNCS(strdup strtod)

AC_OUTPUT(Makefile src/Makefile)
